# tbd2

./: Bloque.cpp  Bloque.h  CMakeLists.txt  Column.cpp  Column.h  ColumnBloque.cpp  ColumnBloque.h  DataBloque.cpp  DataBloque.h  DataFile.cpp  DataFile.h  FachData.cpp  FachData.h  Row.cpp  Row.h  RowBloque.cpp  RowBloque.h  Table.cpp  Table.h  hola.datab  main.cpp
